@@ -366,7 +366,6 @@ AT_DATA([prog.cob], [
            TERMINATE rp.
              CLOSE report-file.
            STOP RUN.
-           END PROGRAM prog.
 ])
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
@@ -4193,7 +4192,6 @@ AT_DATA([prog.cob], [
            CLOSE rp-file
 
            STOP RUN.
-           END PROGRAM prog.
 ])
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
@@ -4630,7 +4628,6 @@ AT_DATA([prog.cob], [
            TERMINATE rp.
              CLOSE report-file.
            STOP RUN.
-           END PROGRAM prog.
 ])
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
